-Renamed to SearchSchools -Integrated everything into the UseCase - Removed decorator and put logging back into controller -Using exceptions for business logic validation, by returning IEnumerable<Establishment> instead of wrapping it in a response object -Introduced "shared" project - this prevents adding every service to program.cs

--- a/CheckYourEligibility-Admin.Tests/CheckYourEligibility-Admin.Tests.csproj
+++ b/CheckYourEligibility-Admin.Tests/CheckYourEligibility-Admin.Tests.csproj
@@ -42,6 +42,7 @@
     <ProjectReference Include="..\CheckYourEligibility-Admin\CheckYourEligibility-Admin.csproj" />
     <ProjectReference Include="..\CheckYourEligibility-FrontEnd.Services\CheckYourEligibility-FrontEnd.Services.csproj" />
 	<ProjectReference Include="..\CheckYourEligibility.TestBase\CheckYourEligibility.TestBase.csproj" />
+	<ProjectReference Include="..\CheckYourEligibility.Shared\CheckYourEligibility.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
