--- a/CheckYourEligibility.TestBase/CheckYourEligibility.TestBase.csproj
+++ b/CheckYourEligibility.TestBase/CheckYourEligibility.TestBase.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
 	  <ProjectReference Include="..\CheckYourEligibility-Admin\CheckYourEligibility-Admin.csproj" />
 	  <ProjectReference Include="..\CheckYourEligibility-FrontEnd.Services\CheckYourEligibility-FrontEnd.Services.csproj" />
+	  <ProjectReference Include="..\CheckYourEligibility.Shared\CheckYourEligibility.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
