--- a/CheckYourEligibility-Parent.Tests/CheckYourEligibility-Parent.Tests.csproj
+++ b/CheckYourEligibility-Parent.Tests/CheckYourEligibility-Parent.Tests.csproj
@@ -43,4 +43,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Usecases\" />
+  </ItemGroup>
+
 </Project>
