--- a/pipeline/continuous-integration.yml
+++ b/pipeline/continuous-integration.yml
@@ -50,3 +50,69 @@ stages:
               publishWebProjects: True
               arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
               zipAfterPublish: True
+          - task: PublishPipelineArtifact@1
+            inputs:
+              targetPath: '$(Build.ArtifactStagingDirectory)'
+              artifactName: 'checkYourEligibility-Parent'
+
+  - stage: DeployAppCypress
+    displayName: Deploy App Cypress
+    jobs:
+      - deployment: cypressdeploy
+        displayName: Deploy App Cypress
+        pool:
+          name: Azure Pipelines
+          vmImage: 'windows-latest'
+        environment: CYPRESS
+        strategy:
+          runOnce:
+            preDeploy:
+              steps:
+                - task: DownloadPipelineArtifact@2
+                  inputs:
+                    buildType: 'current'
+                    targetPath: '$(Pipeline.Workspace)'
+            deploy:
+              steps:
+                - task: AzureRmWebAppDeployment@4
+                  inputs:
+                    ConnectionType: 'AzureRM'
+                    azureSubscription: 's203d.azdo.deployment'
+                    appType: 'webApp'
+                    WebAppName: 'ece-dev-as-cypress'
+                    packageForLinux: '$(Pipeline.Workspace)/checkYourEligibility-Parent/CheckYourEligibility-Parent.zip'
+  - stage: RunCypressTestsCypressEnv
+    displayName: Run Cypress Tests On Cypress Env
+    jobs:
+      - job: 'SetUpCypressEnv'
+        displayName: 'SetUpTestsCypressEnv'
+        pool:
+          vmImage: ubuntu-latest
+        steps:
+          - task: Bash@3
+            inputs:
+              targetType: inline
+              script: |
+                cd tests
+                npm install
+          - task: Bash@3
+            displayName: 'RunTests'
+            inputs:
+              targetType: inline
+              script: |
+                cd tests
+                export CYPRESS_BASE_URL="$(CYPRESS_BASE_URL_CYPRESS)"
+                export CYPRESS_AUTHORIZATION_HEADER="$(AUTHORIZATION_HEADER)"
+                export CYPRESS_AUTH_USERNAME="$(AUTH_USERNAME)"
+                export CYPRESS_AUTH_PASSWORD="$(AUTH_PASSWORD)"
+                export CYPRESS_ONEGOV_EMAIL="$(ONEGOV_EMAIL)"
+                export CYPRESS_ONEGOV_PASSWORD="$(ONEGOV_PASSWORD)"
+                npm run parentE2e:electron
+          - task: Bash@3
+            condition: always()
+            displayName: 'Generate report'
+            inputs:
+              targetType: inline
+              script: |
+                cd tests
+                npm run combine:reports
