--- a/pipeline/continuous-integration.yml
+++ b/pipeline/continuous-integration.yml
@@ -49,7 +49,7 @@ stages:
         displayName: Deploy App Cypress
         pool:
           name: Azure Pipelines
-          vmImage: 'windows-latest'
+          vmImage: 'ubuntu-latest'
         environment: CYPRESS
         strategy:
           runOnce:
