--- a/pipeline/continuous-integration.yml
+++ b/pipeline/continuous-integration.yml
@@ -85,7 +85,7 @@ stages:
                   inputs:
                     targetType: inline
                     script: |
-                      cd $(Pipeline.Workspace)/tests
+                      cd $(Pipeline.Workspace)/checkYourEligibility-Parent/tests
                       npm install
                 - task: Bash@3
                   displayName: 'RunTests'
