--- a/CheckYourEligibility-FrontEnd.Services/CheckYourEligibility-FrontEnd.Services.csproj
+++ b/CheckYourEligibility-FrontEnd.Services/CheckYourEligibility-FrontEnd.Services.csproj
@@ -25,5 +25,9 @@
       <HintPath>..\CheckYourEligibility-Admin\CheckYourEligibility.Domain.dll</HintPath>
     </Reference>
   </ItemGroup>
+	
+	<ItemGroup>
+		<Folder Include="Domain\" />
+	</ItemGroup>
 
 </Project>
