Add cypress screenshots to artifact

--- a/pipeline/continuous-integration.yml
+++ b/pipeline/continuous-integration.yml
@@ -103,5 +103,7 @@ stages:
                   condition: always()
                   displayName: 'Publish test results'
                   inputs:
-                    testResultsFiles: '**/combined-report.xml'
+                    testResultsFiles: |
+                      **/combined-report.xml
+                      **/screenshots/
                     searchFolder: '$(Pipeline.Workspace)/checkYourEligibility-Admin/tests'
