--- a/pipeline/continuous-integration.yml
+++ b/pipeline/continuous-integration.yml
@@ -98,12 +98,15 @@ stages:
                     script: |
                       cd $(Pipeline.Workspace)/checkYourEligibility-Admin/tests
                       npm run combine:reports
-      
+                - task: PublishBuildArtifacts@1
+                  displayName: 'Publish Cypress Screenshot Files'
+                  condition: failed()
+                  inputs:
+                    PathtoPublish: '$(Pipeline.Workspace)/checkYourEligibility-Admin/tests/cypress/screenshots/'
+                    ArtifactName: 'screenshots'
                 - task: PublishTestResults@2
                   condition: always()
                   displayName: 'Publish test results'
                   inputs:
-                    testResultsFiles: |
-                      **/combined-report.xml
-                      **/screenshots/
+                    testResultsFiles: '**/combined-report.xml'
                     searchFolder: '$(Pipeline.Workspace)/checkYourEligibility-Admin/tests'
