Add cypress screenshot publishing

--- a/pipeline/continuous-integration.yml
+++ b/pipeline/continuous-integration.yml
@@ -118,11 +118,15 @@ stages:
                     script: |
                       cd $(Pipeline.Workspace)/checkYourEligibility-Parent/tests
                       npm run combine:reports
+                - task: PublishBuildArtifacts@1
+                  displayName: 'Publish Cypress Screenshot Files'
+                  condition: failed()
+                  inputs:
+                    PathtoPublish: '$(Pipeline.Workspace)/checkYourEligibility-Parent/tests/cypress/screenshots/'
+                    ArtifactName: 'screenshots'
                 - task: PublishTestResults@2
                   condition: always()
                   displayName: 'Publish test results'
                   inputs:
-                    testResultsFiles: |
-                      **/combined-report.xml
-                      **/screenshots/
+                    testResultsFiles: '**/combined-report.xml'
                     searchFolder: '$(Pipeline.Workspace)/checkYourEligibility-Parent/tests'
