Add cypress screenshot artifacts

--- a/pipeline/continuous-deployment.yml
+++ b/pipeline/continuous-deployment.yml
@@ -122,7 +122,12 @@ stages:
          script: |
           cd tests
           npm run combine:reports
-
+      - task: PublishBuildArtifacts@1
+        displayName: 'Publish Cypress Screenshot Files'
+        condition: failed()
+        inputs:
+          PathtoPublish: 'tests/cypress/screenshots/'
+          ArtifactName: 'screenshots'
       - task: PublishTestResults@2
         condition: always()
         displayName: 'Publish test results'
@@ -191,7 +196,12 @@ stages:
          script: |
           cd tests
           npm run combine:reports
-
+      - task: PublishBuildArtifacts@1
+        displayName: 'Publish Cypress Screenshot Files'
+        condition: failed()
+        inputs:
+          PathtoPublish: 'tests/cypress/screenshots/'
+          ArtifactName: 'screenshots'
       - task: PublishTestResults@2
         condition: always()
         displayName: 'Publish test results'
@@ -262,7 +272,12 @@ stages:
               script: |
                 cd tests
                 npm run combine:reports
-
+          - task: PublishBuildArtifacts@1
+            displayName: 'Publish Cypress Screenshot Files'
+            condition: failed()
+            inputs:
+              PathtoPublish: 'tests/cypress/screenshots/'
+              ArtifactName: 'screenshots'
           - task: PublishTestResults@2
             condition: always()
             displayName: 'Publish test results'
