Update how many children per application journey are allowed

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -22,6 +22,7 @@
   },
   "BulkUploadAttemptLimit": 10,
   "BulkEligibilityCheckLimit": 250,
+  "MaxChildren": 99,
   "DfeSignIn": {
     "Authority": "<authority>",
     "MetaDataUrl": "<meta_data_url>",
