feat: added scope for API requests

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -18,7 +18,8 @@
     "Host": "",
     "AuthorisationUsername": "",
     "AuthorisationEmail": "",
-    "AuthorisationPassword": ""
+    "AuthorisationPassword": "",
+    "AuthorisationScope": ""
   },
   "BulkUploadAttemptLimit": 10,
   "BulkEligibilityCheckLimit": 250,
