feat: added scope for API requests

--- a/CheckYourEligibility-Parent/appsettings.json
+++ b/CheckYourEligibility-Parent/appsettings.json
@@ -20,7 +20,8 @@
   "Api": {
     "Host": "",
     "AuthorisationUsername": "",
-    "AuthorisationPassword": ""
+    "AuthorisationPassword": "",
+    "AuthorisationScope": ""
   },
   "OneLogin": {
     "ClientId": "",
