feat: added scopes in app settings

--- a/CheckYourEligibility-Parent/appsettings.json
+++ b/CheckYourEligibility-Parent/appsettings.json
@@ -21,7 +21,7 @@
     "Host": "",
     "AuthorisationUsername": "",
     "AuthorisationPassword": "",
-    "AuthorisationScope": ""
+    "AuthorisationScope": "local_authority check application admin bulk_check establishment user engine"
   },
   "OneLogin": {
     "ClientId": "",
