feat: added scopes in app settings

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -19,7 +19,7 @@
     "AuthorisationUsername": "",
     "AuthorisationEmail": "",
     "AuthorisationPassword": "",
-    "AuthorisationScope": ""
+    "AuthorisationScope": "local_authority check application admin bulk_check establishment user engine"
   },
   "BulkUploadAttemptLimit": 10,
   "BulkEligibilityCheckLimit": 250,
